<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MicrocontrollerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_lbl_dashboard"
                android:textColor="@color/noirOlivier"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_lbl_version"
                android:textColor="@color/silver"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/bleuOlivier">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dashboard"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dashboard_lbl_dashboard"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dashboard_lbl_slash"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dashboard_lbl_microcontrolleurs"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_scroll_listeMicrocontrolleurs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/microcontroller_lbl_astuceLogs"
                        android:textColor="@color/silver"
                        android:gravity="center"
                        android:textStyle="italic"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>